# ypir

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
eval/: 1080.res  a100.res  t4.res
examples/: test_toeplitz.rs
gpu/: CMakeLists.txt  README.md  pir_bench.cu
parameters/: security+correctness.ipynb
src/: client.rs  convolution.rs  kernel.rs  lib.rs  lwe.rs  matmul.cpp  modulus_switch.rs  noise_analysis.rs  packing.rs  params.rs  scheme.rs  server.rs  server_gpu.rs
src/api/: mod.rs  sp_messages.rs
src/cuda/: doublepir.rs  hint_kernel.cu  inspiring.rs  mod.rs  ntt.cuh  offline_inspir_precomp.cu  offline_kernel.cu  offline_kernel_sp.cu  offline_kernel_word.cu  offline_toeplitz_kernel.cu  offline_toeplitz_kernel_crt.cu  online_kernel.cu  online_kernel_sp.cu  online_kernel_word.cu  simplepir.rs  toeplitz.rs  toeplitz_kernel.cu  toeplitz_kernel_crt.cu  word.rs
src/cuda/common/: ntt.cuh
src/cuda/doublepir/: offline.cu  online.cu
src/cuda/inspiring/: packing.cuh  precomp.cu  tc_packing.cu  tc_packing.cuh
src/cuda/simplepir/: offline.cu  online.cu
src/cuda/toeplitz/: offline.cu
src/cuda/word/: offline.cu  online.cu
